sud: yet more build fixes
- "sud" -> "sys_dispatch" in a lot of different places

--- a/criu/Makefile.crtools
+++ b/criu/Makefile.crtools
@@ -61,6 +61,7 @@ obj-y			+= pstree.o
 obj-y			+= rbtree.o
 obj-y			+= rst-malloc.o
 obj-y			+= seccomp.o
+obj-y			+= sud.o
 obj-y			+= seize.o
 obj-y			+= shmem.o
 obj-y			+= sigframe.o
